--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "bin": "./cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape test/*.js"
   },
   "repository": {
     "type": "git",
@@ -29,5 +29,9 @@
     "pumpify": "^1.3.3",
     "rc": "^0.6.0",
     "through2": "^0.6.3"
+  },
+  "devDependencies": {
+    "concat-stream": "^1.4.7",
+    "tape": "^3.5.0"
   }
 }
