--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "ldjson-stream": "^1.2.1",
     "level-inc": "^0.1.2",
+    "level-updater": "^0.1.0",
     "levelup": "^0.19.0",
     "memdown": "^1.0.0",
     "pumpify": "^1.3.3",
